# sandvoxel

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  flamegraph_tutorial.md  genflame.sh  main.cpp  main_imgui.cpp  profiling.md
resources/textures/: crafting_table_side.png:Zone.Identifier
src/: benchmark.hpp  block.cpp  block.hpp  chunk.cpp  chunk.hpp  config.cpp  config.hpp  main.cpp  map.hpp  player.cpp  player.hpp  renderer.hpp  world.cpp  world.hpp
src/Block/: Air.cpp  Air.hpp  BlockFactory.cpp  BlockFactory.hpp  Dirt.cpp  Dirt.hpp  Fluid.cpp  Fluid.hpp  Grass.cpp  Grass.hpp  Sand.cpp  Sand.hpp  block.cpp  block.hpp
src/FluidSimulation/: FluidSimulation.cpp  FluidSimulation.hpp
src/Simulations/: Simulation.hpp
src/Simulations/FluidSimulation/: FluidSimulation.cpp  FluidSimulation.hpp
src/Simulations/SandSImulation/: SandSimulation.cpp  SandSimulation.hpp
src/World/: chunk.cpp  chunk.hpp  world.cpp  world.hpp
src/backups/: main_texure_model_mesh.cpp  main_voxel_wzor.cpp
